force-app/main/default/objects/ssot__MarketSegment__dlm/ssot__MarketSegment__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Market Segment</referenceEntityGroup>
        <referenceEntityName>MarketSegment</referenceEntityName>
        <referenceEntitySubjectArea>Market Audience</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>