force-app/main/default/objects/ssot__MarketSegment__dlm/fields/ssot__DataExportFreqUOM__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataExportFreqUOM__c</fullName>
    <label>Data Export Frequency UOM</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataExportFreqUOM</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>