force-app/main/default/objects/ssot__MarketSegment__dlm/fields/ssot__LastRefreshedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastRefreshedDate__c</fullName>
    <label>Last Refreshed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastRefreshedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>