force-app/main/default/objects/ssot__MarketSegment__dlm/fields/ssot__MarketSegmentNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MarketSegmentNumber__c</fullName>
    <label>Market Segment Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MarketSegmentNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>