force-app/main/default/objects/ssot__MarketSegment__dlm/fields/ssot__MktSegPubStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MktSegPubStatus__c</fullName>
    <label>Market Segment Publication Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MktSegPubStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>