force-app/main/default/objects/ssot__MarketSegment__dlm/fields/ssot__NextRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__NextRefreshDate__c</fullName>
    <label>Next Refresh Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NextRefreshDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>